--- a/vForth.vcxproj
+++ b/vForth.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Forth.hpp" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
