--- a/vForth.vcxproj.filters
+++ b/vForth.vcxproj.filters
@@ -21,10 +21,18 @@
     <ClInclude Include="Forth.hpp">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Common.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="vForth.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="prims.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
