--- a/vForth.vcxproj
+++ b/vForth.vcxproj
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Forth.hpp" />
+    <ClInclude Include="Func.hpp" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Common.hpp" />
   </ItemGroup>
