--- a/vForth.vcxproj.filters
+++ b/vForth.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Common.hpp">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Func.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="vForth.cpp">
